# hfinance

./: .gitignore  PLAN.md  SPEC.md  dev.sh
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  cash.py  dashboard.py  holdings.py  liabilities.py  market.py
backend/app/core/: auth.py  config.py
backend/app/db/: connection.py  init_db.py  schema.sql
backend/app/models/: schemas.py
backend/app/repositories/: cash_repo.py  holding_repo.py  liability_repo.py  price_repo.py  snapshot_repo.py
backend/app/services/: fund_history_import_service.py  market_fetcher.py  price_service.py  scheduler.py  snapshot_service.py
deploy/: backup.sh  deploy.sh
deploy/nginx/: hfinance.conf
deploy/systemd/: hfinance.service
frontend/: components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.vue  main.ts
frontend/src/components/: CashAccountForm.vue  CashAccountList.vue  DistributionChart.vue  HoldingForm.vue  HoldingList.vue  LiabilityForm.vue  LiabilityList.vue  OverviewCard.vue  PnlCalendar.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  cash.ts  dashboard.ts  holding.ts  liability.ts
frontend/src/utils/: format.ts  request.ts
frontend/src/views/: AccountingView.vue  AuthView.vue  DashboardView.vue  InvestmentView.vue
